--- a/ez_plant/static/css/garden.css
+++ b/ez_plant/static/css/garden.css
@@ -248,6 +248,9 @@
 }
 
 #plantStatsChart {
+  display: table;
+  margin-left: auto;
+  margin-right: auto;
   margin-top: -85px;
 }
 
@@ -272,6 +275,7 @@
   right: 25%;
   color: aqua;
   cursor: pointer;
+  text-shadow: 1px 1px 1px darkcyan;
   transition: all .2s ease-in-out;
   transform: scale(1.0);
 }
