--- a/ez_plant/templates/garden.html
+++ b/ez_plant/templates/garden.html
@@ -9,50 +9,50 @@
     google.charts.load('current', {packages: ['corechart', 'line']});
   </script>
   <script src="{{ url_for('static', filename='js/jquery.timepicker.min.js')}}"></script>
-
 </head>
 
 <body>
-    <div class="headDiv">
-      <div class="image">
-        <span class="text-over-sign">
-                [[ userDetails.first_name ]]'s Garden
-            </span>
-      </div>
+  <div class="headDiv">
+    <div class="image">
+      <span class="text-over-sign">
+              [[ userDetails.first_name ]]'s Garden
+          </span>
     </div>
+  </div>
 
-    <div class="plantsContainer">
-      <div class="row">
-        <div class="col-sm-6 col-md-3" ng-repeat="plant in plants">
-          <div id="[[plant.plant_id]]"class="thumbnail" ng-click="openPlantDetails($index)">
-            <img ng-if="[[plant.image_url]] != ''" ng-src="[[plant.image_url]]" alt="...">
-            <img ng-if="[[plant.image_url]] ==''" ng-src="static/assets/images/default_plant.png" alt="...">
-            <div class="caption">
-              <h4 class="plantNameTxt marginFix">[[plant.name]]</h4>
-              <p class="plantName marginFix">[[plant.plant_type]]</p>
-              <p class="marginFix btnContainer">
-                <a id="deletePlantTrash" title="Delete" class="plantBtn"  ng-click="$event.stopPropagation();deletePlant($index)" role="button"> <i class="fa fa-trash fa-lg" aria-hidden="true"></i></a>
-                <a id="editPlantPencil" title="Edit" class="plantBtn" role="button"> <i class="fa fa-pencil fa-lg" aria-hidden="true"></i></a>
-              </p>
-              <p ng-show="plant.water_data.last_watered != null" class="lastWateredTxt marginFix">Last watered: [[plant.water_data.last_watered]]</p>
-              <p ng-show="plant.water_data.last_watered == null" class="lastWateredTxt marginFix">Last watered: Never</p>
-            </div>
+  <div class="plantsContainer">
+    <div class="row">
+      <div class="col-sm-6 col-md-3" ng-repeat="plant in plants">
+        <div id="[[plant.plant_id]]"class="thumbnail" ng-click="openPlantDetails($index)">
+          <img ng-if="[[plant.image_url]] != ''" ng-src="[[plant.image_url]]" alt="...">
+          <img ng-if="[[plant.image_url]] ==''" ng-src="static/assets/images/default_plant.png" alt="...">
+          <div class="caption">
+            <h4 class="plantNameTxt marginFix">[[plant.name]]</h4>
+            <p class="plantName marginFix">[[plant.plant_type]]</p>
+            <p class="marginFix btnContainer">
+              <a id="deletePlantTrash" title="Delete" class="plantBtn"  ng-click="$event.stopPropagation();deletePlant($index)" role="button"> <i class="fa fa-trash fa-lg" aria-hidden="true"></i></a>
+              <a id="editPlantPencil" title="Edit" class="plantBtn" role="button"> <i class="fa fa-pencil fa-lg" aria-hidden="true"></i></a>
+            </p>
+            <p ng-show="plant.water_data.last_watered != null" class="lastWateredTxt marginFix">Last watered: [[plant.water_data.last_watered]]</p>
+            <p ng-show="plant.water_data.last_watered == null" class="lastWateredTxt marginFix">Last watered: Never</p>
           </div>
         </div>
-        <div class="col-sm-6 col-md-3" ng-if="plants.length < 4">
-          <div id="new" class="thumbnail addPlant" ng-click="openPlantDetails()">
-            <span class="plusTxt">+</span>
-            <div class="addPlantTxt">Add Plant</div>
-          </div>
+      </div>
+      <div class="col-sm-6 col-md-3" ng-if="plants.length < 4">
+        <div id="new" class="thumbnail addPlant" ng-click="openPlantDetails()">
+          <span class="plusTxt">+</span>
+          <div class="addPlantTxt">Add Plant</div>
+        </div>
       </div>
     </div>
   </div>
-  <div id="errMsg" class="alert alert-danger message-animation submit-msg fadeTransition hideClass" ng-class="{'fadeOut': !errMsg}" role="alert">
+  <div id="errMsg" class="alert alert-danger submit-msg hideClass" role="alert">
      [[errMsg]]
   </div>
-  <div id="successMsg" class="alert alert-success message-animation submit-msg fadeTransition hideClass"  ng-class="{'fadeOut': !successMsg}" role="alert">
+  <div id="successMsg" class="alert alert-success submit-msg  hideClass" role="alert">
       [[successMsg]]<i class="material-icons">local_florist</i>
   </div>
+
   <span class="plantDetailsWrapper">
     <div class="plantDetails" ng-show="showForm">
       <div class="arrow" >
@@ -68,27 +68,28 @@
         <div class="tab-content">
           <form role="tabpanel" class="tab-pane active" id="formTab" ng-show="content == 'details'" name="plantForm" ng-submit="submitPlant()">
             <div class="innerFormDiv form-group row">
-              <div class="col-sm-3 col-sm-offset-1 photoDBG">
-                  <div class="imgContainer" for="inputId" ng-click="openDialog();">
-                    <img ng-if="[[plant.image_url]]  != ''" ng-src="[[plant.image_url]]"></img>
-                    <img ng-if="[[plant.image_url]]  == ''" ng-src="static/assets/images/default_plant.png"></img>
-                    <div class="pencil">
-                      <i class="fa fa-pencil-square fa-lg" aria-hidden="true"></i>
-                    </div>
+              <div class="col-sm-3 col-sm-offset-1">
+                <div class="imgContainer" for="inputId" ng-click="openDialog();">
+                  <img ng-if="[[plant.image_url]]  != ''" ng-src="[[plant.image_url]]"></img>
+                  <img ng-if="[[plant.image_url]]  == ''" ng-src="static/assets/images/default_plant.png"></img>
+                  <div class="pencil">
+                    <i class="fa fa-pencil-square fa-lg" aria-hidden="true"></i>
                   </div>
-                  <input id="inputId" type="file" name="plantPhoto" onchange="angular.element(this).scope().readURL(this);" style="position: fixed; top: -100em"/>
+                </div>
+                <input id="inputId" type="file" name="plantPhoto" onchange="angular.element(this).scope().readURL(this);" style="position: fixed; top: -100em"/>
               </div>
 
-              <!-- nickname row -->
-               <div class="col-sm-5 text-left">
-                    <div class="form-group row">
-                      <label for="nickname" class="col-sm-3 form-control-label">Nickname</label>
-                      <div class="col-sm-5">
-                        <input name="nickname" type="text" ng-model="plant.name" class="form-control" id="nickname" placeholder="Nickname" required>
-                      </div>
-                    </div>
+              <!-- Fields -->
+              <div class="col-sm-5 text-left">
+                <!-- nickname row -->
+                <div class="form-group row">
+                  <label for="nickname" class="col-sm-3 form-control-label">Nickname</label>
+                  <div class="col-sm-5">
+                    <input name="nickname" type="text" ng-model="plant.name" class="form-control" id="nickname" placeholder="Nickname" required>
+                  </div>
+                </div>
 
-              <!-- plant type row -->
+                <!-- plant type row -->
                 <div class="form-group row">
                   <label for="plant_type" class="col-sm-3 form-control-label">Type</label>
                   <div class="col-sm-5">
@@ -96,84 +97,80 @@
                   </div>
                 </div>
 
-              <!-- sensor port row -->
+                <!-- sensor port row -->
                 <div class="form-group row">
-                      <label for="sensorPort" class="col-sm-3 form-control-label">Sensor Port</label>
-                      <div class="col-sm-5">
-                        <select name="sensor" id="sensorPort" class="form-control" ng-model="plant.moisture_sensor_port" ng-options="item for item in sensorPorts" required>
-                          <option></option>
-                        </select>
-                      </div>
-                    </div>
-
-              <!-- pump port row -->
-                <div class="form-group row">
-                      <label for="pumpPort" class="col-sm-3 form-control-label">Pump Port</label>
-                      <div class="col-sm-5">
-                        <select name="pump" id="pumpPort" class="form-control" ng-model="plant.water_pump_port" ng-options="item for item in pumpPorts" required>
-                          <option></option>
-                        </select>
-                      </div>
-                    </div>
-
-
-               </div>
-
-                 <!-- watering method row -->
-               <div class="form-group row">
-                    <label for="" class="col-sm-2 col-sm-offset-4 text-left">Watering Method</label>
-                    <div class="radioiDiv">
-                      <div class="radio-inline col-sm-1">
-                        <label class="col-sm-1">
-                          <input type="radio" name="waterMethod" value="schedule" ng-model="plant.water_data.water_mode" class="ng-pristine ng-untouched ng-valid ng-not-empty">Scheduled
-                        </label>
-                      </div>
-                      <div class="radio-inline col-sm-1">
-                        <label class="col-sm-1">
-                          <input type="radio" name="waterMethod" value="moisture" ng-model="plant.water_data.water_mode" required="" class="ng-pristine ng-untouched ng-valid-required ng-not-empty ng-valid">Moisture
-                        </label>
-                      </div>
+                  <label for="sensorPort" class="col-sm-3 form-control-label">Sensor Port</label>
+                  <div class="col-sm-5">
+                    <select name="sensor" id="sensorPort" class="form-control" ng-model="plant.moisture_sensor_port" ng-options="item for item in sensorPorts" required>
+                      <option></option>
+                    </select>
                   </div>
-                  <img src="static/assets/images/water-now.jpg">
                 </div>
 
-
-            
-        <div class="col-sm-5 col-sm-offset-5">
-    <div class="well">
-                  <div class="row ng-hide" ng-show="plant.water_data.water_mode == 'schedule'">
-                    <span class="water-every col-sm-3">Water every</span>
-                    <input name="days" type="number" id="daysInput" ng-change="calcNextWatering()" ng-model="plant.water_data.repeat_every" class="form-control col-sm-1 schedule-input ng-pristine ng-untouched ng-valid ng-empty ng-valid-required" ng-required="plant.water_data.water_mode == 'schedule'">
-                    <span class="days-at col-sm-2">days, at</span>
-                    <input name="hour" id="hourInput" type="text" ng-model="plant.water_data.hour" ng-change="calcNextWatering()" class="waterTime schedule-input form-control col-sm-1 ng-pristine ng-untouched ng-valid ng-empty ng-valid-required ui-timepicker-input" ng-required="plant.water_data.water_mode == 'schedule'" autocomplete="off">
+                <!-- pump port row -->
+                <div class="form-group row">
+                  <label for="pumpPort" class="col-sm-3 form-control-label">Pump Port</label>
+                  <div class="col-sm-5">
+                    <select name="pump" id="pumpPort" class="form-control" ng-model="plant.water_pump_port" ng-options="item for item in pumpPorts" required>
+                      <option></option>
+                    </select>
                   </div>
-                  <div ng-show="plant.water_data.water_mode == 'schedule'" class="row nextWatering ng-hide">Next watering time:
-                    <input name="next" type="hidden" ng-model="plant.water_data.next_watering" class="ng-pristine ng-untouched ng-valid ng-empty">
-                    <span class="ng-binding"></span>
+                </div>
+
+                <!-- watering method row -->
+                <div class="form-group row">
+                  <label class="col-sm-3">Watering Method</label>
+                  <div class="col-sm-6">
+                    <div class="radio-inline">
+                      <label class="col-sm-1">
+                        <input type="radio" name="waterMethod" value="schedule" ng-model="plant.water_data.water_mode">Scheduled
+                      </label>
+                    </div>
+                    <div class="radio-inline col-sm-1">
+                      <label class="col-sm-1">
+                        <input type="radio" name="waterMethod" value="moisture" ng-model="plant.water_data.water_mode">Moisture
+                      </label>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <img style="height: 50px; width: 50px;"src="static/assets/images/water-now.jpg"/>
+              <!-- water method divs -->
+              <div class="col-sm-5 col-sm-offset-5">
+                <div class="well">
+                  <div class="row" ng-show="plant.water_data.water_mode == 'schedule'">
+                    <span class="water-every col-sm-3">Water every</span>
+                    <input name="days" type="number" id="daysInput" ng-change="calcNextWatering()" ng-model="plant.water_data.repeat_every" class="form-control col-sm-1 schedule-input" ng-required="plant.water_data.water_mode == 'schedule'">
+                    <span class="days-at col-sm-2">days, at</span>
+                    <input name="hour" id="hourInput" type="text" ng-model="plant.water_data.hour" ng-change="calcNextWatering()" class="waterTime schedule-input form-control col-sm-1 ui-timepicker-input" ng-required="plant.water_data.water_mode == 'schedule'" autocomplete="off">
+                  </div>
+                  <div ng-show="plant.water_data.water_mode == 'schedule'" class="row nextWatering">Next watering time:
+                    <input name="next" type="hidden" name="nextWatering" ng-model="plant.water_data.next_watering">
+                    <span>[[plant.water_data.next_watering | date: 'dd.MM.y HH:mm']]</span>
                   </div>
 
                   <div class="row" ng-show="plant.water_data.water_mode == 'moisture'">
                     <span class="col-sm-8  col-lg-8 text-left">Water when moisture level is below</span>
                     <span class="input-group moisture-input">
-                      <input name="moistureLevel" type="number" min="0" max="80" ng-model="plant.water_data.low_threshold" class="form-control col-sm-1 col-lg-1 ng-pristine ng-untouched ng-valid ng-valid-min ng-valid-max ng-valid-required ng-not-empty" ng-required="plant.water_data.water_mode == 'moisture'" required="required">
+                      <input name="moistureLevel" type="number" min="0" max="80" ng-model="plant.water_data.low_threshold" class="form-control col-sm-1 col-lg-1" ng-required="plant.water_data.water_mode == 'moisture'" required="required">
                       <span class="input-group-addon">%</span>
                     </span>
                   </div>
                 </div>
-        </div>
-        
-
-
+              </div>
+            </div>
+            <div class="form-group row clearfix">
+                <button id="submitPlantBtn" type="submit" class="btn btn-info" ng-disabled="!plantForm.$dirty"><i class="fa fa-envira" aria-hidden="true"></i> Submit Plant</button>
             </div>
           </form>
-
           <div  style ="text-align: center;" role="tabpanel" id="statsTab" ng-show="content == 'stats'">
             <div ng-show="!statsErr">
               <h2 class="statsTitle">Moisture % of the last 24 hours</h2>
               <div id="plantStatsChart"></div>
               <a title="Refresh" ng-click="refreshing = true;drawChart()" class="refreshStats"  role="button">
                 <i ng-show="!refreshing" class="fa fa-refresh"></i>
-                <i ng-show="refreshing" class="fa fa-refresh fa-spin"></i></a>
+                <i ng-show="refreshing" class="fa fa-refresh fa-spin"></i>
+              </a>
             </div>
 
             <div ng-show="statsErr" style="height: 430px;">
