fix water now btn + call to server

--- a/ez_plant/static/css/garden.css
+++ b/ez_plant/static/css/garden.css
@@ -87,10 +87,31 @@
 
 .schedule-input {
   display: inline;
-  width: 100px;
+  width: 130px;
   padding-left: 2px;
   padding-right: 2px;
   text-align: center;
+}
+
+.waterNowWrapper button {
+    height: 80px;
+    font-size: 20px;
+    font-weight: bold;
+    margin-left: 20px;
+}
+
+.waterNowWrapper button:focus {
+  outline: thin dotted #333;
+}
+.waterNowWrapper button img {
+    display: block;
+    margin: auto;
+    width: 45px;
+    transition: transform ease 0.7s;
+}
+
+.waterNowWrapper button:hover img {
+  transform: rotate(-50deg);
 }
 
 .water-every {
@@ -210,6 +231,7 @@
 
 .innerFormDiv {
   padding-top: 17px;
+  margin-bottom: 0px;
 }
 
 .imgContainer img {
@@ -247,6 +269,18 @@
   display: none;
 }
 
+#submitPlantBtn {
+  clear: both;
+}
+
+.clearfix {
+  clear: both;
+}
+
+.radiosDiv {
+  width: auto;
+  padding-left: 0px;
+}
 #plantStatsChart {
   display: table;
   margin-left: auto;
@@ -286,6 +320,32 @@
   transition: all .2s ease-in-out;
   transform: scale(1.5);
 }
+
+.loading {
+  position: fixed;
+  z-index: 999;
+  height: 2em;
+  width: 2em;
+  overflow: show;
+  margin: auto;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+}
+
+/* Transparent Overlay */
+.loading:before {
+  content: '';
+  display: block;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.3);
+}
+
 /*.fadeTransition{
   transition: opacity .5s;
 }
