--- a/ez_plant/templates/garden.html
+++ b/ez_plant/templates/garden.html
@@ -83,24 +83,24 @@
               <div class="col-sm-5 text-left">
                 <!-- nickname row -->
                 <div class="form-group row">
-                  <label for="nickname" class="col-sm-3 form-control-label">Nickname</label>
-                  <div class="col-sm-5">
+                  <label for="nickname" class="col-sm-4 form-control-label">Nickname</label>
+                  <div class="col-sm-8">
                     <input name="nickname" type="text" ng-model="plant.name" class="form-control" id="nickname" placeholder="Nickname" required>
                   </div>
                 </div>
 
                 <!-- plant type row -->
                 <div class="form-group row">
-                  <label for="plant_type" class="col-sm-3 form-control-label">Type</label>
-                  <div class="col-sm-5">
+                  <label for="plant_type" class="col-sm-4 form-control-label">Type</label>
+                  <div class="col-sm-8">
                       <input name="plant_type" type="text" class="form-control" id="plant_type" ng-model="plant.plant_type" placeholder="Type" required>
                   </div>
                 </div>
 
                 <!-- sensor port row -->
                 <div class="form-group row">
-                  <label for="sensorPort" class="col-sm-3 form-control-label">Sensor Port</label>
-                  <div class="col-sm-5">
+                  <label for="sensorPort" class="col-sm-4 form-control-label">Sensor Port</label>
+                  <div class="col-sm-8">
                     <select name="sensor" id="sensorPort" class="form-control" ng-model="plant.moisture_sensor_port" ng-options="item for item in sensorPorts" required>
                       <option></option>
                     </select>
@@ -109,8 +109,8 @@
 
                 <!-- pump port row -->
                 <div class="form-group row">
-                  <label for="pumpPort" class="col-sm-3 form-control-label">Pump Port</label>
-                  <div class="col-sm-5">
+                  <label for="pumpPort" class="col-sm-4 form-control-label">Pump Port</label>
+                  <div class="col-sm-8">
                     <select name="pump" id="pumpPort" class="form-control" ng-model="plant.water_pump_port" ng-options="item for item in pumpPorts" required>
                       <option></option>
                     </select>
@@ -119,14 +119,14 @@
 
                 <!-- watering method row -->
                 <div class="form-group row">
-                  <label class="col-sm-3">Watering Method</label>
-                  <div class="col-sm-6">
+                  <label for="waterMethod" class="col-sm-4">Watering Method</label>
+                  <div class="radiosDiv col-sm-6">
                     <div class="radio-inline">
                       <label class="col-sm-1">
                         <input type="radio" name="waterMethod" value="schedule" ng-model="plant.water_data.water_mode">Scheduled
                       </label>
                     </div>
-                    <div class="radio-inline col-sm-1">
+                    <div class="radio-inline">
                       <label class="col-sm-1">
                         <input type="radio" name="waterMethod" value="moisture" ng-model="plant.water_data.water_mode">Moisture
                       </label>
@@ -134,30 +134,32 @@
                   </div>
                 </div>
               </div>
-              <img style="height: 50px; width: 50px;"src="static/assets/images/water-now.jpg"/>
-              <!-- water method divs -->
-              <div class="col-sm-5 col-sm-offset-5">
-                <div class="well">
-                  <div class="row" ng-show="plant.water_data.water_mode == 'schedule'">
-                    <span class="water-every col-sm-3">Water every</span>
-                    <input name="days" type="number" id="daysInput" ng-change="calcNextWatering()" ng-model="plant.water_data.repeat_every" class="form-control col-sm-1 schedule-input" ng-required="plant.water_data.water_mode == 'schedule'">
-                    <span class="days-at col-sm-2">days, at</span>
-                    <input name="hour" id="hourInput" type="text" ng-model="plant.water_data.hour" ng-change="calcNextWatering()" class="waterTime schedule-input form-control col-sm-1 ui-timepicker-input" ng-required="plant.water_data.water_mode == 'schedule'" autocomplete="off">
-                  </div>
-                  <div ng-show="plant.water_data.water_mode == 'schedule'" class="row nextWatering">Next watering time:
-                    <input name="next" type="hidden" name="nextWatering" ng-model="plant.water_data.next_watering">
-                    <span>[[plant.water_data.next_watering | date: 'dd.MM.y HH:mm']]</span>
-                  </div>
-
-                  <div class="row" ng-show="plant.water_data.water_mode == 'moisture'">
-                    <span class="col-sm-8  col-lg-8 text-left">Water when moisture level is below</span>
-                    <span class="input-group moisture-input">
-                      <input name="moistureLevel" type="number" min="0" max="80" ng-model="plant.water_data.low_threshold" class="form-control col-sm-1 col-lg-1" ng-required="plant.water_data.water_mode == 'moisture'" required="required">
-                      <span class="input-group-addon">%</span>
-                    </span>
-                  </div>
-                </div>
+              <div class="waterNowWrapper col-sm-3" ng-show="plant.plant_id">
+                <button ng-click="waterNow()" class="btn btn-info col-sm-7" type="button"><img src="static/assets/images/wateringCan.png"/>Water Now!</button>
               </div>
+            </div>
+            <!-- water method divs -->
+            <div class="well col-sm-offset-5 col-sm-6 row">
+              <!-- <div class="well"> -->
+                <div class="row" ng-show="plant.water_data.water_mode == 'schedule'">
+                  <span class="water-every col-sm-3">Water every</span>
+                  <input name="days" type="number" id="daysInput" ng-change="calcNextWatering()" ng-model="plant.water_data.repeat_every" class="form-control col-sm-1 schedule-input" ng-required="plant.water_data.water_mode == 'schedule'">
+                  <span class="days-at col-sm-2">days, at</span>
+                  <input name="hour" id="hourInput" type="text" ng-model="plant.water_data.hour" ng-change="calcNextWatering()" class="waterTime schedule-input form-control col-sm-1 ui-timepicker-input" ng-required="plant.water_data.water_mode == 'schedule'" autocomplete="off">
+                </div>
+                <div ng-show="plant.water_data.water_mode == 'schedule'" class="row nextWatering">Next watering time:
+                  <input type="hidden" name="nextWatering" ng-model="plant.water_data.next_watering">
+                  <span>[[plant.water_data.next_watering | date: 'dd.MM.y HH:mm']]</span>
+                </div>
+
+                <div class="row" ng-show="plant.water_data.water_mode == 'moisture'">
+                  <span class="col-sm-8  col-lg-8 text-left">Water when moisture level is below</span>
+                  <span class="input-group moisture-input">
+                    <input name="moistureLevel" type="number" min="0" max="80" ng-model="plant.water_data.low_threshold" class="form-control col-sm-1 col-lg-1" ng-required="plant.water_data.water_mode == 'moisture'" required="required">
+                    <span class="input-group-addon">%</span>
+                  </span>
+                </div>
+              <!-- </div> -->
             </div>
             <div class="form-group row clearfix">
                 <button id="submitPlantBtn" type="submit" class="btn btn-info" ng-disabled="!plantForm.$dirty"><i class="fa fa-envira" aria-hidden="true"></i> Submit Plant</button>
@@ -181,5 +183,6 @@
       </div>
     </div>
   </span>
+  <div class="loading" ng-show="isLoading"><i class="fa fa-spinner fa-pulse fa-3x fa-fw"></i></div>
 </body>
 </html>
