--- a/ez_plant/templates/garden.html
+++ b/ez_plant/templates/garden.html
@@ -5,9 +5,9 @@
 
   <link rel="stylesheet" href="{{ url_for('static', filename='css/garden.css')}}" />
   <link rel="stylesheet" href="{{ url_for('static', filename='css/jquery.timepicker.css')  }}">
-  <script type="text/javascript">
+  <!-- <script type="text/javascript">
     google.charts.load('current', {packages: ['corechart', 'line']});
-  </script>
+  </script> -->
   <script src="{{ url_for('static', filename='js/jquery.timepicker.min.js')}}"></script>
 </head>
 
