--- a/ez_plant/templates/garden.html
+++ b/ez_plant/templates/garden.html
@@ -62,8 +62,8 @@
       <div class="formDiv">
         <!-- Nav tabs -->
         <ul class="nav nav-tabs" role="tablist">
-          <li role="presentation" ng-class="{'active': content=='details'}"><a class="tab" ng-click="changeTabContent('details')" aria-controls="addplant" role="tab" data-toggle="tab"><span class="tabText">Details</span></a></li>
-          <li role="presentation" ng-class="{'active': content=='stats'}"><a class="tab" ng-click="changeTabContent('stats'); drawChart()" aria-controls="statistics" role="tab" data-toggle="tab"><span class="tabText">Statistics<span></a></li>
+          <li role="presentation" ng-class="{'active': content=='details'}"><a ng-click="changeTabContent('details')" aria-controls="addplant" role="tab" data-toggle="tab"><span class="tabText">Details</span></a></li>
+          <li role="presentation" ng-class="{'active': content=='stats'}"><a ng-click="changeTabContent('stats'); drawChart()" aria-controls="statistics" role="tab" data-toggle="tab"><span class="tabText">Statistics<span></a></li>
         </ul>
         <div class="tab-content">
           <form role="tabpanel" class="tab-pane active" id="formTab" ng-show="content == 'details'" name="plantForm" ng-submit="submitPlant()">
@@ -163,6 +163,7 @@
             </div>
             <div class="form-group row clearfix">
                 <button id="submitPlantBtn" type="submit" class="btn btn-info" ng-disabled="!plantForm.$dirty"><i class="fa fa-envira" aria-hidden="true"></i> Submit Plant</button>
+                <button id="discardChangesBtn" type="button" class="btn btn-info" ng-click="undoChanges()" ng-disabled="!plantForm.$dirty"><i class="fa fa-undo" aria-hidden="true"></i> Undo Changes</button>
             </div>
           </form>
           <div  style ="text-align: center;" role="tabpanel" id="statsTab" ng-show="content == 'stats'">
