--- a/ez_plant/templates/garden.html
+++ b/ez_plant/templates/garden.html
@@ -139,7 +139,7 @@
               </div>
             </div>
             <!-- water method divs -->
-            <div class="well col-sm-offset-5 col-sm-6 row">
+            <div class="grayWatering well col-sm-offset-5 col-sm-6 row">
               <!-- <div class="well"> -->
                 <div class="row" ng-show="plant.water_data.water_mode == 'schedule'">
                   <span class="water-every col-sm-3">Water every</span>
