--- a/ez_plant/static/css/garden.css
+++ b/ez_plant/static/css/garden.css
@@ -281,7 +281,6 @@
   width: auto;
   padding-left: 0px;
 }
-
 #plantStatsChart {
   display: table;
   margin-left: auto;
@@ -297,6 +296,10 @@
 
 #statsTab {
   position: relative;
+}
+
+.tabText {
+  cursor: pointer;
 }
 
 .refreshStats {
@@ -343,15 +346,16 @@
   background-color: rgba(0,0,0,0.3);
 }
 
-/*.tab{
-  cursor: pointer;
-}*/
+.grayWatering{
+  margin-left: 48%;
+  width: 44%;
+}
 
-/*#discardChangesBtn{
+#discardChangesBtn{
   background: white;
   color: green;
-  border-color: #46b8da;
-}*/
+/* border-color: #46b8da;*/
+}
 /*.fadeTransition{
   transition: opacity .5s;
 }
