--- a/ez_plant/templates/garden.html
+++ b/ez_plant/templates/garden.html
@@ -62,8 +62,8 @@
       <div class="formDiv">
         <!-- Nav tabs -->
         <ul class="nav nav-tabs" role="tablist">
-          <li role="presentation" ng-class="{'active': content=='details'}"><a ng-click="changeTabContent('details')" aria-controls="addplant" role="tab" data-toggle="tab">Details</a></li>
-          <li role="presentation" ng-class="{'active': content=='stats'}"><a ng-click="changeTabContent('stats'); drawChart()" aria-controls="statistics" role="tab" data-toggle="tab">Statistics</a></li>
+          <li role="presentation" ng-class="{'active': content=='details'}"><a id="detailsTabText" ng-click="changeTabContent('details')" aria-controls="addplant" role="tab" data-toggle="tab" href="">Details</a></li>
+          <li role="presentation" ng-class="{'active': content=='stats'}"><a id="statsTabText"  ng-click="changeTabContent('stats'); drawChart()" aria-controls="statistics" role="tab" data-toggle="tab" href="">Statistics</a></li>
         </ul>
         <div class="tab-content">
           <form role="tabpanel" class="tab-pane active" id="formTab" ng-show="content == 'details'" name="plantForm" ng-submit="submitPlant()">
@@ -139,8 +139,7 @@
               </div>
             </div>
             <!-- water method divs -->
-            <div class="grayWatering well col-sm-offset-5 col-sm-6 row">
-              <!-- <div class="well"> -->
+            <div class="waterMethodDiv well col-sm-offset-5 col-sm-6 row">
                 <div class="row" ng-show="plant.water_data.water_mode == 'schedule'">
                   <span class="water-every col-sm-3">Water every</span>
                   <input name="days" type="number" id="daysInput" ng-change="calcNextWatering()" ng-model="plant.water_data.repeat_every" class="form-control col-sm-1 schedule-input" ng-required="plant.water_data.water_mode == 'schedule'">
@@ -159,7 +158,6 @@
                     <span class="input-group-addon">%</span>
                   </span>
                 </div>
-              <!-- </div> -->
             </div>
             <div class="form-group row clearfix">
                 <button id="submitPlantBtn" type="submit" class="btn btn-info" ng-disabled="!plantForm.$dirty"><i class="fa fa-envira" aria-hidden="true"></i> Submit Plant</button>
