--- a/ez_plant/static/css/garden.css
+++ b/ez_plant/static/css/garden.css
@@ -377,7 +377,13 @@
 }
 
 .waterNowSpinner {
-  font-size: 20px;
+  font-size: 25px;
   display: block;
   margin: auto;
+}
+
+.waitingToWater {
+  font-size: 15px;
+  white-space: normal;
+  font-weight: normal;
 }
