--- a/ez_plant/templates/garden.html
+++ b/ez_plant/templates/garden.html
@@ -165,7 +165,7 @@
             </div>
             <div class="form-group row clearfix">
                 <button id="submitPlantBtn" type="submit" class="btn btn-info" ng-disabled="!plantForm.$dirty"><i class="fa fa-envira" aria-hidden="true"></i> Submit Plant</button>
-                <button id="discardChangesBtn" type="button" class="btn btn-info" ng-click="undoChanges()" ng-disabled="!plantForm.$dirty"><i class="fa fa-undo" aria-hidden="true"></i> Undo Changes</button>
+                <button id="undoChangesBtn" type="button" class="btn btn-info" ng-click="undoChanges()" ng-disabled="!plantForm.$dirty"><i class="fa fa-undo" aria-hidden="true"></i> Undo Changes</button>
             </div>
           </form>
           <div  style ="text-align: center;" role="tabpanel" id="statsTab" ng-show="content == 'stats'">
