--- a/ez_plant/static/css/about.css
+++ b/ez_plant/static/css/about.css
@@ -3,9 +3,9 @@ body {
 }
 
 .aboutText{
-  color: green;
-  font-size: x-large;
-  font-weight: bold;
-  text-shadow: 1px 1px 5px chartreuse;
-  margin-bottom: 20px;
+	color: black;
+	font-size: 25px;
+	font-family: Sans-serif;
+	text-shadow: 1px 0px 3px white;
+	margin-bottom: 5px;
 }
