--- a/ez_plant/templates/index.html
+++ b/ez_plant/templates/index.html
@@ -44,7 +44,7 @@
               <ul class="nav navbar-nav navbar-right">
                   <li><a href="#/"><i class="fa fa-home"></i> Home</a></li>
                   <li><a href="#about"><i class="fa fa-shield"></i> About</a></li>
-                  <li><a href="#" ng-click="logout()">Logout</a></li>
+                  <li><a href="#" ng-click="logout()"> <i class="fa fa-sign-out" aria-hidden="true"></i>Logout</a></li>
               </ul>
           </div>
         </nav>
