--- a/ez_plant/static/css/garden.css
+++ b/ez_plant/static/css/garden.css
@@ -27,7 +27,7 @@
 .thumbnail {
     width: 200px;
     height: 293px;
-    overflow: auto;
+    overflow: hidden;
     cursor: pointer;
     border-radius: 10px;
 }
@@ -94,12 +94,13 @@
 }
 
 .waterNowWrapper button {
- /* height: 90px;*/
   height: 100px;
-  font-size: 20px;
   font-weight: bold;
-  /*margin-left: 20px;*/
   margin-left: 7%;
+}
+
+.waterNowTxt {
+  font-size: 20px;
 }
 
 .waterNowWrapper button:focus {
@@ -156,6 +157,14 @@
 .lastWateredTxt {
   font-size: smaller;
   color: gray;
+  display: inline-block;
+  vertical-align: text-top;
+}
+
+.waterNowSpinnerThumbnail {
+    display: inline-block;
+    color: green;
+    font-size: 20px;
 }
 
 .marginFix {
@@ -385,7 +394,8 @@
 }
 
 .waitingToWater {
-  font-size: 15px;
+  font-size: 13px;
   white-space: normal;
   font-weight: normal;
+  line-height: normal;
 }
