--- a/ez_plant/templates/garden.html
+++ b/ez_plant/templates/garden.html
@@ -22,19 +22,20 @@
 
   <div class="plantsContainer">
     <div class="row">
-      <div class="col-sm-6 col-md-3" ng-repeat="plant in plants">
-        <div id="[[plant.plant_id]]"class="thumbnail" ng-click="openPlantDetails($index)">
-          <img ng-if="[[plant.image_url]] != ''" ng-src="[[plant.image_url]]" alt="...">
-          <img ng-if="[[plant.image_url]] ==''" ng-src="static/assets/images/default_plant.png" alt="...">
+      <div class="col-sm-6 col-md-3" ng-repeat="curPlant in plants">
+        <div id="[[curPlant.plant_id]]"class="thumbnail" ng-click="openPlantDetails($index)">
+          <img ng-if="[[curPlant.image_url]] != ''" ng-src="[[curPlant.image_url]]" alt="...">
+          <img ng-if="[[curPlant.image_url]] ==''" ng-src="static/assets/images/default_plant.png" alt="...">
           <div class="caption">
-            <h4 class="plantNameTxt marginFix">[[plant.name]]</h4>
-            <p class="plantName marginFix">[[plant.plant_type]]</p>
+            <h4 class="plantNameTxt marginFix">[[curPlant.name]]</h4>
+            <p class="plantName marginFix">[[curPlant.plant_type]]</p>
             <p class="marginFix btnContainer">
               <a id="deletePlantTrash" title="Delete" class="plantBtn"  ng-click="$event.stopPropagation();deletePlant($index)" role="button"> <i class="fa fa-trash fa-lg" aria-hidden="true"></i></a>
               <a id="editPlantPencil" title="Edit" class="plantBtn" role="button"> <i class="fa fa-pencil fa-lg" aria-hidden="true"></i></a>
             </p>
-            <p ng-show="plant.water_data.last_watered != null" class="lastWateredTxt marginFix">Last watered: [[plant.water_data.last_watered]]</p>
-            <p ng-show="plant.water_data.last_watered == null" class="lastWateredTxt marginFix">Last watered: Never</p>
+            <p ng-show="curPlant.water_data.last_watered != null" class="lastWateredTxt marginFix">Last watered: [[curPlant.water_data.last_watered | date: 'dd/MM/y HH:mm']]</p>
+            <p ng-show="curPlant.water_data.last_watered == null" class="lastWateredTxt marginFix">Last watered: Never</p>
+            <i ng-show="curPlant.water_now && plant.plant_id != curPlant.plant_id" title="Waiting to be watered..." class="waterNowSpinnerThumbnail fa fa-spinner fa-pulse fa-3x fa-fw"></i>
           </div>
         </div>
       </div>
@@ -136,10 +137,11 @@
               </div>
               <div class="waterNowWrapper col-sm-3" ng-show="plant.plant_id">
                 <button ng-click="waterNow()" class="btn btn-info col-sm-7" type="button" ng-disabled="plant.water_now">
-                  <span ng-if="!plant.water_now"><img src="static/assets/images/wateringCan.png"/>Water Now!</span>
-                  <span class="waitingToWater" ng-if="plant.water_now"><i class="waterNowSpinner fa fa-spinner fa-pulse fa-3x fa-fw"></i>Waiting to be watered...</span>
+                  <span class="waterNowTxt" ng-if="!plant.water_now"><img src="static/assets/images/wateringCan.png"/>Water Now!</span>
+                  <span class="waitingToWater" ng-if="plant.water_now"><i class="waterNowSpinner fa fa-spinner fa-pulse fa-3x fa-fw"></i>Plant will be watered in the next 5 minutes...</span>
                 </button>
-                <p class="lastWateredTxt marginFix col-sm-9" ng-show="plant.water_data.last_watered == null">Last watered: Never</p>
+                <p ng-show="plant.water_data.last_watered != null" class="lastWateredTxt col-sm-9">Last watered: [[plant.water_data.last_watered | date: 'dd/MM/y HH:mm']]</p>
+                <p ng-show="plant.water_data.last_watered == null" class="lastWateredTxt marginFix- col-sm-9">Last watered: Never</p>
               </div>
             </div>
             <!-- water method divs -->
@@ -152,7 +154,7 @@
                 </div>
                 <div ng-show="plant.water_data.water_mode == 'schedule'" class="row nextWatering">Next watering time:
                   <input type="hidden" name="nextWatering" ng-model="plant.water_data.next_watering">
-                  <span>[[plant.water_data.next_watering | date: 'dd.MM.y HH:mm']]</span>
+                  <span>[[plant.water_data.next_watering | date: 'dd/MM/y HH:mm']]</span>
                 </div>
 
                 <div class="row" ng-show="plant.water_data.water_mode == 'moisture'">
