--- a/ez_plant/static/css/garden.css
+++ b/ez_plant/static/css/garden.css
@@ -26,7 +26,7 @@
 
 .thumbnail {
     width: 200px;
-    height: 293px;
+    height: 310px;
     overflow: hidden;
     cursor: pointer;
     border-radius: 10px;
@@ -155,14 +155,17 @@
 }
 
 .lastWateredTxt {
-  font-size: smaller;
+  font-size: 12px;
   color: gray;
   display: inline-block;
   vertical-align: text-top;
+  padding-left: 0px;
+  padding-right: 0px;
+  text-align: center;
 }
 
 .waterNowSpinnerThumbnail {
-    display: inline-block;
+    display: block;
     color: green;
     font-size: 20px;
 }
