--- a/ez_plant/templates/index.html
+++ b/ez_plant/templates/index.html
@@ -1,24 +1,17 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html ng-app="ez_plant">
 <head>
-  <!-- load bootstrap and fontawesome via CDN -->
   <title>EZ-Plant</title>
   <link rel="shortcut icon" href="{{ url_for('static', filename='assets/images/favicon.ico') }}"/>
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" />
-  <!-- <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" /> -->
   <link rel="stylesheet" href="{{ url_for('static', filename='css/home.css')}}" />
   <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>  <!-- SPELLS -->
-  <!-- load angular and angular route via CDN -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="https://use.fontawesome.com/2b4f6247e1.js"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.5/angular-route.js"></script>
-  <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" ></script> -->
-
-
 
   <script src="{{ url_for('static', filename='js/app.js')}}"></script>
   <script src="{{ url_for('static', filename='js/services.js')}}"></script>
