Added Demo User login option

--- a/ez_plant/templates/login.html
+++ b/ez_plant/templates/login.html
@@ -1,5 +1,5 @@
 <div class="col-md-6 col-md-offset-3">
-    <h2>Login</h2>
+    <h2 class="login-title">Login <span style="font-size: 20px">or</span> <button class="btn btn-primary" ng-click="login(true)" style="display: inline-block">Enter as Demo User</button></h2>
     <div class="alert alert-danger message-animation" role="alert" ng-if="errorMessage != ''">
         [[ errorMessage ]]
     </div>
